# Gausplat

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: doc.yml  rustdoc.yml
crates/gausplat/: Cargo.toml
crates/gausplat/src/: lib.rs
doc/: REPORT.md
examples/gausplat-scepter/: Cargo.toml  README.md
examples/gausplat-scepter/src/: lib.rs  main.rs  mod.rs
examples/gausplat-scepter/src/command/: mod.rs
examples/gausplat-scepter/src/command/gaussian_3d/: eval.rs  mod.rs  render.rs  train.rs
examples/gausplat-scepter/src/runner/: mod.rs
examples/gausplat-scepter/src/runner/gaussian_3d/: eval.rs  mod.rs  render.rs  train.rs
